Updated min-width to valid values.

--- a/themes/kscu-theme/layouts/partials/show-details.html
+++ b/themes/kscu-theme/layouts/partials/show-details.html
@@ -199,11 +199,11 @@
             /* margin-left: max(0px, 5%);
             margin-right: max(0px, 5%); */
             margin-bottom: 1.5rem;
-            min-width: none;
+            min-width: 0px !important;
             margin-right: 0px;
         }
         #right-col {
-            min-width: none;
+            min-width: 0px !important;
             /* margin-left: max(0px, 5%);
             margin-right: max(0px, 5%); */
         }
