Set min and max show image h&w

--- a/themes/kscu-theme/layouts/partials/show-details.html
+++ b/themes/kscu-theme/layouts/partials/show-details.html
@@ -65,7 +65,7 @@
                                     "></p>
                             </div>
                         </div>
-                        <div class="flex border border-l-2 items-center justify-center overflow-hidden" style="width: 130px; height: 130px;">
+                        <div class="flex border border-l-2 items-center justify-center overflow-hidden" style="min-width: 130px; max-width: 130px; min-height: 130px; max-height: 130px;">
                             <img id="left-image" class="object-cover" src="">
                         </div>
                     </div>
@@ -141,7 +141,7 @@
                                                     "></p>
                             </div>
                         </div>
-                        <div class="flex border border-l-2 items-center justify-center overflow-hidden" style="width: 130px; height: 130px;">
+                        <div class="flex border border-l-2 items-center justify-center overflow-hidden" style="min-width: 130px; max-width: 130px; min-height: 130px; max-height: 130px;">
                             <img id="right-image" class="object-cover" src="">
                         </div>
                     </div>
