--- a/themes/kscu-theme/layouts/partials/article-pagination.html
+++ b/themes/kscu-theme/layouts/partials/article-pagination.html
@@ -22,7 +22,7 @@
               >
               <span class="flex flex-col">
                 <span
-                  class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
+                  class="mt-[0.1rem] leading-6 group-hover:text-neutral-500 group-hover:underline group-hover:decoration-1 group-hover:underline-offset-2 group-hover:text-gray-400 group-hover:decoration-wavy group-hover:decoration-primary-500"
                   >{{ $prev.Title | emojify }}</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
@@ -39,7 +39,7 @@
             <a class="flex text-right group" href="{{ $next.RelPermalink }}">
               <span class="flex flex-col">
                 <span
-                  class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
+                  class="mt-[0.1rem] leading-6 group-hover:text-neutral-500 group-hover:underline group-hover:decoration-1 group-hover:underline-offset-2 group-hover:text-gray-400 group-hover:decoration-wavy"
                   >{{ $next.Title | emojify }}</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
