--- a/themes/kscu-theme/layouts/partials/footer.html
+++ b/themes/kscu-theme/layouts/partials/footer.html
@@ -21,7 +21,7 @@
           <p id="title_text" class="text-sm">Santa Clara University's Student-Run Radio</p>
           <a href="https://publicfiles.fcc.gov/fm-profile/KSCU">
             <span id="opif"
-              class="text-sm font-bold hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy"
+              class="text-sm font-bold hover:text-neutral-500 hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy"
               style="text-decoration-skip-ink: none;">Access Public Inspection File (OPIF)</p>
           </a>
         </div>
@@ -29,19 +29,19 @@
         <div id="address" class="flex grow justify-between flex-col text-md font-base">
           <p class="text-sm">Studio Phone: <a 
           style="text-decoration-skip-ink: none;"
-          class="font-bold hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy"
+          class="font-bold hover:text-neutral-500 hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy"
           href="tel:4085545728"
           >(408)-554-5728</a></p>
           <p>Email Us: <a style="text-decoration-skip-ink: none;"
-              class="font-bold hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy"
+              class="font-bold hover:text-neutral-500 hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy"
               href="mailto:gm@kscu.org">gm@kscu.org</a></p>
-          <p id="credits"><a class="text-sm font-bold hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy"
+          <p id="credits"><a class="text-sm font-bold hover:text-neutral-500 hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy"
             style="text-decoration-skip-ink: none;" href="/credits">Site Credits</a></p>
         </div>
         {{ else }}
         <div id="address" class="text-md py-3 font-medium">
           <p>Email us: <a style="text-decoration-skip-ink: none;"
-              class="font-bold hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy"
+              class="font-bold hover:text-neutral-500 hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy"
               href="mailto:gm@kscu.org">gm@kscu.org</a></p>
           <p> 500 El Camino Real </p>
           <!-- Link to site credits -->
