--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -540,13 +540,17 @@ video {
   text-decoration: underline;
   font-weight: 500;
   text-decoration-color: rgba(var(--color-primary-300), 1);
+  /* Added below */
+  text-decoration-skip-ink: none;
 }
 
 .prose :where(a):not(:where([class~="not-prose"] *)):hover {
-  color: rgba(var(--color-neutral), 1);
-  text-decoration: none;
-  background-color: rgba(var(--color-primary-600), 1);
-  border-radius: 0.09rem;
+  text-underline-offset: 2px;
+  text-decoration-thickness: 1px;
+  text-decoration-style: wavy;
+  text-decoration-line: underline;
+  --tw-text-opacity: 1;
+  color: rgba(var(--color-neutral-500), var(--tw-text-opacity));
 }
 
 .prose :where(strong):not(:where([class~="not-prose"] *)) {
@@ -3067,6 +3071,11 @@ html {
   outline-color: transparent;
 }
 
+.group:hover .group-hover\:text-neutral-500 {
+  --tw-text-opacity: 1;
+  color: rgba(var(--color-neutral-500), var(--tw-text-opacity));
+}
+
 .group:hover .group-hover\:text-primary-300 {
   --tw-text-opacity: 1;
   color: rgba(var(--color-primary-300), var(--tw-text-opacity));
@@ -3083,6 +3092,18 @@ html {
 
 .group:hover .group-hover\:decoration-primary-500 {
   text-decoration-color: rgba(var(--color-primary-500), 1);
+}
+
+.group:hover .group-hover\:decoration-wavy {
+  text-decoration-style: wavy;
+}
+
+.group:hover .group-hover\:decoration-1 {
+  text-decoration-thickness: 1px;
+}
+
+.group:hover .group-hover\:underline-offset-2 {
+  text-underline-offset: 2px;
 }
 
 .group:hover .group-hover\:opacity-100 {
