Changed regex and show-details opacity.

--- a/themes/kscu-theme/layouts/partials/show-details.html
+++ b/themes/kscu-theme/layouts/partials/show-details.html
@@ -2,7 +2,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Condensed&display=swap');
 </style>
 
-<div id="show-details-body" class="flex shrink-0 font-medium text-sm z-9">
+<div id="show-details-body" class="flex shrink-0 font-medium text-sm z-9 opacity-100">
     <div id="section-collapsible" class="pt-7 pb-2 max-w-6xl m-auto">
         <div class="flex shrink-0 justify-between items-center overflow-hidden">
             <div id="two-cols" class="flex grow flex-row justify-around mx-7">
